fix: footer spacing causing scrollbar overflows

--- a/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/src/app/pages/component-sidenav/component-sidenav.scss
@@ -114,7 +114,7 @@ app-component-sidenav {
   // footer should always reside at the bottom of the screen.
   // if container not 100vh, push min height to that minus
   // the offset of the top bar and the footer height
-  min-height: calc(100vh - 245px);
+  min-height: calc(100vh - 229px);
 }
 
 @media (max-width: $small-breakpoint-width) {
