--- a/src/app/shared/footer/footer.scss
+++ b/src/app/shared/footer/footer.scss
@@ -1,5 +1,4 @@
 .docs-footer {
-  margin-top: 40px;
   padding: 12px;
   font-size: 12px;
 }
